--- a/src/app/garage/garage.component.html
+++ b/src/app/garage/garage.component.html
@@ -1,8 +1,9 @@
 <div class="container">
-  <div>
-    <form #createForm="ngForm" class="form-group" (ngSubmit)="createCar()">
+  <div class="d-flex justify-content-between align-items-center">
+    <form #createForm="ngForm" class="form-group d-flex align-items-center justify-content-between" (ngSubmit)="createCar()">
       <input type="text" placeholder="TYPE CAR BRAND"
              name="name"
+             class="input-group-text m-1"
              required
              ngModel
              #name="ngModel">
@@ -10,21 +11,22 @@
              name="color"
              required
              ngModel
+             class="m-1"
              #color="ngModel">
-      <button type="submit"  [disabled]="!createForm.valid">CREATE</button>
+      <button type="submit" class="btn btn-success" [disabled]="!createForm.valid">CREATE</button>
     </form>
-  </div>
-  <div>
-    <form #updateForm="ngForm" class="form-group" (ngSubmit)="updateCar()">
+    <form #updateForm="ngForm" class="form-group d-flex align-items-center justify-content-between" (ngSubmit)="updateCar()">
       <input  name="name"
               ngModel
               #name="ngModel"
+              class="input-group-text m-1"
               placeholder="TYPE CAR BRAND">
       <input name="color"
              ngModel
              #color="ngModel"
+             class="m-1"
              type="color">
-      <button>UPDATE</button>
+      <button class="btn btn-secondary">UPDATE</button>
     </form>
   </div>
   <table class="table">
@@ -37,18 +39,18 @@
     </thead>
     <tbody>
     <tr *ngFor="let car of cars">
-      <td class="d-flex justify-content-sm-between align-items-center col-2">
+      <td class="d-flex justify-content-sm-between align-items-center col-2 col-md-1">
         <div class="d-flex flex-sm-column">
           <button class="btn btn-sm btn-outline-primary m-1" [ngClass]="car.id === selectedCar?.id ? 'active' : ''"
                   (click)="selectCar(car)">Select</button>
-          <button class="btn btn-sm btn-outline-primary m-1"
+          <button class="btn btn-sm btn-danger m-1"
                   (click)="deleteCar(car.id)">Remove</button>
         </div>
         <div class="d-flex flex-sm-column justify-content-sm-between">
-          <button class="btn btn-sm btn-outline-info m-1">A</button>
-          <button class="btn btn-sm btn-outline-info m-1">B</button>
+          <button class="btn btn-sm btn-outline-info m-1" (click)="updateCarStatus(car.id,'started')">A</button>
+          <button class="btn btn-sm btn-outline-info m-1" (click)="updateCarStatus(car.id,'stopped')">B</button>
         </div>
-        <span>
+        <span >
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="150" height="70" viewBox="0 0 256 256" xml:space="preserve">
           <defs>
           </defs>
