--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="col-12">
   <div class="d-flex flex-column justify-content-start align-items-center flex-wrap col-4 m-5">
     <button type="button"
-            class="btn btn-outline-info btn-lg m-4"
+            class="btn btn-outline-success btn-lg m-4"
             routerLink="/garage"
             routerLinkActive="active">Garage</button>
     <button type="button"
