--- a/src/app/garage/garage.component.html
+++ b/src/app/garage/garage.component.html
@@ -1,5 +1,9 @@
 <div class="container">
   <div class="d-flex justify-content-between align-items-center">
+    <div>
+      <button class="btn btn-success m-1" (click)="startDriving()">Race</button>
+      <button class="btn btn-secondary" (click)="stopDriving()">Reset</button>
+    </div>
     <form #createForm="ngForm" class="form-group d-flex align-items-center justify-content-between" (ngSubmit)="createCar()">
       <input type="text" placeholder="TYPE CAR BRAND"
              name="name"
